syntax = "proto3";
package xibc.core.packet.v1;

option go_package = "github.com/teleport-network/teleport/x/xibc/core/packet/types";

import "gogoproto/gogo.proto";
import "xibc/core/packet/v1/packet.proto";

// GenesisState defines the xibc channel submodule's genesis state.
message GenesisState {
  repeated PacketState acknowledgements = 1 [ (gogoproto.nullable) = false ];
  repeated PacketState commitments = 2 [ (gogoproto.nullable) = false ];
  repeated PacketState receipts = 3 [ (gogoproto.nullable) = false ];
  repeated PacketSequence send_sequences = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"send_sequences\""
  ];
}

// PacketSequence defines the genesis type necessary to retrieve and store
// next send and receive sequences.
message PacketSequence {
  string src_chain = 1 [ (gogoproto.moretags) = "yaml:\"src_chain\"" ];
  string dst_chain = 2 [ (gogoproto.moretags) = "yaml:\"dst_chain\"" ];
  uint64 sequence = 3;
}
